function from 1 to 4

--- a/css/jobs/jobs.css
+++ b/css/jobs/jobs.css
@@ -24,6 +24,11 @@ a:hover{
     color: rgba(41, 41, 41, 0.75);
     font-weight: 400;
     font-size: 14px;
+    overflow : hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 .job-header{
 
